<resources>
    <string name="app_name">SDC18 - Drawing App for Developer</string>
    <string name="action_settings">Settings</string>
    <string name="action_erase">Erase</string>
    <string name="action_delete">Delete</string>
    <string name="action_undo">Undo</string>
    <string name="action_save">Save</string>
    <string name="action_color">Color Picker</string>
    <string name="action_brush">Brush Size</string>
    <string name="delete_drawing">Delete Drawing!</string>
    <string name="new_drawing_warning">Do you want to erase drawing?</string>
    <string name="action_redo">Redo</string>
    <string name="action_share">DualView</string>
    <string name="label_brush_size">Value :</string>
    <string name="label_brush_color">Brush Color:</string>
</resources>
